--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <h2 class="welcomemessage">
-        Entrez un nombre pour jouer :)
+        Entrez un nombre entre 1 et 1000 pour jouer  :)
     </h2>
-    <input type="text" id="input" placeholder="Entrez un nombre" maxlength="4">
+    <input type="text" id="input" maxlength="4">
     <div id="diverreur">
         <p id="erreurnombre"></p>
     </div>
     <button id="valider">Valider</button>
     <p id="chosennumber"></p>
-    <h1 id="bravo"></h1>
     <p>
-        nombre de coups : <span id="coups" type="number"></span>
+        chances restantes : <span id="coups" type="number"></span>
     </p>
     <button id="continuer">Continuer</button>
+    <h1 id="bravo"></h1>
     <ul id="record"></ul>
 
 </body>
